# NgPeytonCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: clap2d5pt.cpp  dlap2d5pt.cpp  dlap2d9pt.cpp  lap2d9pt.h  nd2d.h  slap2d9pt.cpp
f2c/: C2Finterface.c  Makefile  assmb.c  betree.c  bfinit.c  blkfc2.c  blkfct.c  blkslv.c  btree2.c  chlsup.c  chordr.c  dscal.c  epost2.c  etordr.c  etpost.c  etree.c  f2c.h  fcnthn.c  flo2ho.c  fnsplt.c  fntsiz.c  fsup1.c  fsup2.c  genmmd.c  getrhs.c  gtimer.c  igathr.c  ilo2ho.c  inpnv.c  invinv.c  lap2d5pt.c  lap2d5pt.x  ldindx.c  mmdelm.c  mmdint.c  mmdnum.c  mmdupd.c  mmpy.c  mmpy1.c  mmpy2.c  (+13 more)
include/NgPeytonCpp/: LDLtSolver.h
src/: LDLtSolver.cpp  LDLtSolver.h  LDLtSolver_impl.h  SymmetricSparse.h  SymmetricSparse_impl.h  nd2d.h
src/details/: BLAS.h  Conversion.h  EliminationTree.h  NumericFactorization.h  Ordering.h  Solve.h  SymbolicFactorization.h  Utilities.h
tests/: test_isFullRepresentation.cpp  test_solve.cpp
